Fixed vertical align 'add to cart' link for J3 view

--- a/media/com_redshop/css/redshop.css
+++ b/media/com_redshop/css/redshop.css
@@ -1016,3 +1016,6 @@ a.rightButton:hover{
 	overflow: hidden;
 	height: 0;
 }
+.addtocart_formclass{
+	margin: 0;
+}
